--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    text-decoration: none; 
+    list-style-type: none;
 }
 
 
@@ -75,6 +76,7 @@
     display: grid;
     grid-template-columns: 1fr;
     margin: 10px;
+    list-style-type: none;
 }
 
 .index_div {
@@ -307,6 +309,7 @@
         display: grid;
         grid-template-columns: 1fr;
         margin: 10px;
+        list-style-type: none;
     }
 
     .index_div {
