--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 @import 'utilities/variables';
 @import 'base/reset';
 @import 'components/contactos';
 @import 'components/footer';
 @import 'components/galeria';
-@import 'components/globales';
 @import 'components/header';
 @import 'components/indexpage';
 @import 'components/productos';
 @import 'components/mediaquery.scss';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
+@import 'utilities/maps';
+@import 'utilities/mixins';
+@import 'utilities/normalize';
+
 
 
 
