--- a/SCSS/utilities/_variables.scss
+++ b/SCSS/utilities/_variables.scss
@@ -1,2 +1,7 @@
 /* variables de color */
-$color_principal: #141433
+$color_principal: #000026 ;
+$color_secundario: #110952;
+$text-color: #331ba9;
+
+/* font */
+$font-principal: 'montserrat';
