--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
 /* variables de color */
+/* font */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
 .container {
   font-family: 'Montserrat', sans-serif;
@@ -65,19 +67,6 @@
   margin: 10px; }
 
 /*------------------------------galeria----------------------------*/
-.container {
-  font-family: 'Montserrat', sans-serif;
-  color: aliceblue; }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style-type: none;
-  font-family: 'Montserrat', sans-serif;
-  color: #2f7bbd; }
-
 /*------------------------------header----------------------------*/
 .header {
   background-color: #141433;
@@ -102,7 +91,7 @@
 /*------------------------------header----------------------------*/
 /* ------------------------------ index main  ------------------------------ */
 .bodycontenedor {
-  background-color: #010A0F;
+  background-color: #000026;
   font-family: 'Montserrat', sans-serif;
   color: aliceblue;
   text-align: center;
@@ -118,7 +107,7 @@
   margin: 10px; }
 
 .textos {
-  border: 10px solid #141433;
+  border: 10px solid #000026;
   padding: 10px;
   display: grid;
   grid-template-columns: 1fr;
@@ -128,7 +117,6 @@
 .index_div {
   display: grid;
   grid-template-columns: 1fr;
-  border: 10px #141433 solid;
   margin: 10px; }
 
 .video-container {
@@ -161,11 +149,6 @@
   grid-template-columns: 1fr;
   text-align: center; }
 
-.productos__menu ul :hover {
-  color: blueviolet;
-  cursor: pointer;
-  transition: .5s; }
-
 .productos__menu ul {
   list-style-type: none;
   padding: 0px;
@@ -176,7 +159,6 @@
   padding: 1rem;
   border: 1rem;
   border-radius: 1rem;
-  background-color: #7a2b2b;
   text-transform: uppercase; }
 
 /*------------------------------productos----------------------------*/
@@ -213,7 +195,7 @@
   /*------------------------------header----------------------------*/
   /* ------------------------------ index main  ------------------------------ */
   .bodycontenedor {
-    background-color: #010A0F;
+    background-color: #000026;
     font-family: 'Montserrat', sans-serif;
     color: aliceblue;
     text-align: center;
@@ -226,7 +208,6 @@
     grid-template-columns: repeat(3, 1fr);
     margin: 10px; }
   .textos {
-    border: 10px solid #141433;
     padding: 10px;
     display: grid;
     grid-template-columns: 1fr;
@@ -260,10 +241,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center; }
-  .productos__menu ul :hover {
-    color: blueviolet;
-    cursor: pointer;
-    transition: .5s; }
   .productos__menu ul {
     list-style-type: none;
     padding: 0px;
@@ -273,7 +250,6 @@
     padding: 1rem;
     border: 1rem;
     border-radius: 1rem;
-    background-color: black;
     text-transform: uppercase; }
   /*------------------------------productos----------------------------*/
   /* ------------------------------contactos--------------------------- */
@@ -320,3 +296,20 @@
   .zoom:hover {
     transform: scale(1.5); }
   /* --------------------------footer-------------------------- */ }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  font-family: "montserrat";
+  background: #000026; }
+
+ul {
+  list-style: none; }
+
+a {
+  text-decoration: none;
+  font-family: "montserrat";
+  color: #331ba9; }
