--- a/SCSS/utilities/_normalize.scss
+++ b/SCSS/utilities/_normalize.scss
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Roboto&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: $font-principal
+    
 }
 
 
@@ -21,3 +24,4 @@ a{
     font-family: $font-principal;
     color: $text-color;
 }
+
