--- a/views/product.html
+++ b/views/product.html
@@ -17,7 +17,7 @@
 
 <body class="bodycontenedor">
     <header id="ir a arriba">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">*EMPRESA*</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,19 +28,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../gallery/gallery.html">gallery</a>
+                            <a class="nav-link" href="./gallery.html">gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./product.html">productos</a>
+                            <a class="nav-link active" href="./product.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../contact/contact.html">Contacto</a>
+                            <a class="nav-link" href="./contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../about/about.html">sobre nosotros</a>
+                            <a class="nav-link" href="./about.html">sobre nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -53,7 +53,7 @@
     </header>
     <main>
         <div>
-            <h2>Lista de productos</h2>
+            <h1>Lista de productos</h1>
             <marquee behavior="scroll" direction="left">*aqui puede elegir nuestros productos*</marquee>
             <div>
                 <a class="btn btn-primary productos__menu" id="Motherboards" href="">Motherboards</a>
@@ -205,34 +205,37 @@
             <section class="">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">
-                            *EMPRESA*
-                        </h6>
                         <p>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="../index.html" role="button"><i class="bi bi-motherboard"></i></a>
+                                href="../index.html" role="button"><i class="bi bi-motherboard">*EMPRESA*</i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                        <p>
-                            <a class="text-white" href="../index.html">Home</a>
-                        </p>
-                        <p>
-                            <a class="text-white" href="../product/product.html">Productos</a>
-                        </p>
-                        <p>
-                            <a class="text-white" href="../contact/contact.html">Contacto</a>
-                        </p>
+                        <div>
+                            <p>
+                                <a class="text-white" href="../index.html">Home</a>
+                            </p>
+                        </div>
+                        <div>
+                            <p>
+                                <a class="text-white" href="../views/product.html">Productos</a>
+                            </p>
+                        </div>
+                        <div>
+                            <p>
+                                <a class="text-white" href="../views/contact.html">Contacto</a>
+                            </p>
+                        </div>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="../gallery/gallery.html">galeria</a>
+                            <a class="text-white" href="../views/gallery.html">galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../about/about.html">about</a>
+                            <a class="text-white" href="../views/about.html">about</a>
                         </p>
                         <p>
                             <a class="text-white" href="#">boton arrepentimiento</a>
