--- a/SCSS/components/_indexpage.scss
+++ b/SCSS/components/_indexpage.scss
@@ -4,18 +4,11 @@
     background-color: $color-principal;
     font-family: 'Montserrat', sans-serif;
     color: aliceblue;
-    text-align:center;
-    display:grid;
-    grid-template-rows: auto 1fr auto;
-    min-height:100vh;
-    overflow-x: hidden;
-}
-
-.videos {
-    padding: 10px;
+    text-align: center;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 10px;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
 .textos {
@@ -51,11 +44,20 @@
     height: 100%;
 }
 
-.google_mapa{
-    display: flex;
-    justify-content: right;
-    padding-right: 3rem;
-    padding-top: 6rem;
+
+.fullscreen-video-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
+
+.fullscreen-video-wrap video {
+    min-height: 100%;
+    min-width: 100%;
+}
+
 
 /* ------------------------------ index main ------------------------------ */
