--- a/SCSS/components/_mediaquery.scss
+++ b/SCSS/components/_mediaquery.scss
@@ -55,32 +55,42 @@
         background-color: $color_principal;
         font-family: 'Montserrat', sans-serif;
         color: aliceblue;
-        text-align:center;
-        display:grid;
+        text-align: center;
+        display: grid;
         grid-template-rows: auto 1fr auto;
-        min-height:100vh;
+        min-height: 100vh;
     }
 
-    .videos {
-        padding: 10px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        margin: 10px;
+    .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        height: 0;
+        overflow: hidden;
     }
 
-    .textos {
-        padding: 10px;
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 10px;
-        list-style-type: none;
+    .video-container iframe,
+    .video-container object,
+    .video-container embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 
-    .index_div {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        border: 10px #141433 solid;
-        margin: 10px;
+    .fullscreen-video-wrap {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    .fullscreen-video-wrap video {
+        min-height: 100%;
+        min-width: 100%;
     }
 
     /* ------------------------------ index main ------------------------------ */
@@ -101,14 +111,14 @@
         margin: 10px;
     }
 
-    .galeria_imagenes{
+    .galeria_imagenes {
         margin: 3em;
     }
 
-    .card:hover{
+    .card:hover {
         transform: scale(1.05);
-     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-   }
+        box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+    }
 
     /*------------------------------galeria----------------------------*/
 
@@ -119,7 +129,7 @@
         grid-template-columns: repeat(3, 1fr);
         text-align: center;
     }
-    
+
 
     .productos__menu ul {
         list-style-type: none;
@@ -140,16 +150,15 @@
     /* ------------------------------contactos--------------------------- */
     .contactos {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
         text-align: center;
-        padding: 10px;
-        margin: 8px 10px;
+        margin: 0 auto;
         box-sizing: border-box;
         padding-top: 5em;
     }
 
     .boton_contacto {
-    text-align: center;
+        text-align: center;
         padding: 2rem;
     }
 
@@ -163,14 +172,15 @@
         text-align: center;
         width: 100%;
         border: 3px solid gray;
-        
+
 
     }
+
     .footer__menu ul {
         padding: 1rem;
         list-style-type: none;
         text-align: center;
-        
+
     }
 
 
@@ -187,19 +197,6 @@
         padding-inline-start: 3rem;
         padding-inline-end: 3rem;
         text-transform: uppercase;
-        
-    }
-
-    .zoom {
-        transition: transform .2s;
-        width: 500px;
-        height: 500px;
-        margin: 0 auto;
-
-    }
-
-    .zoom:hover {
-        transform: scale(1.5);
 
     }
 
