--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Roboto&display=swap");
 /* variables de color */
 /* font */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Roboto&display=swap");
 .container {
   font-family: 'Montserrat', sans-serif;
   color: aliceblue; }
@@ -76,9 +78,7 @@
     list-style-type: none;
     text-align: center; }
   .header .ul :hover {
-    color: blueviolet;
-    cursor: pointer;
-    transition: .5s; }
+    cursor: pointer; }
   .header .li {
     border: 1rem;
     border-radius: 1rem;
@@ -99,12 +99,6 @@
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
   overflow-x: hidden; }
-
-.videos {
-  padding: 10px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin: 10px; }
 
 .textos {
   border: 10px solid #000026;
@@ -135,11 +129,17 @@
   width: 100%;
   height: 100%; }
 
-.google_mapa {
-  display: flex;
-  justify-content: right;
-  padding-right: 3rem;
-  padding-top: 6rem; }
+.fullscreen-video-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden; }
+
+.fullscreen-video-wrap video {
+  min-height: 100%;
+  min-width: 100%; }
 
 /* ------------------------------ index main ------------------------------ */
 /*------------------------------productos----------------------------*/
@@ -202,22 +202,30 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh; }
-  .videos {
-    padding: 10px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 10px; }
-  .textos {
-    padding: 10px;
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 10px;
-    list-style-type: none; }
-  .index_div {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    border: 10px #141433 solid;
-    margin: 10px; }
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden; }
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+  .fullscreen-video-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden; }
+  .fullscreen-video-wrap video {
+    min-height: 100%;
+    min-width: 100%; }
   /* ------------------------------ index main ------------------------------ */
   /*------------------------------galeria----------------------------*/
   .galeria {
@@ -255,10 +263,9 @@
   /* ------------------------------contactos--------------------------- */
   .contactos {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     text-align: center;
-    padding: 10px;
-    margin: 8px 10px;
+    margin: 0 auto;
     box-sizing: border-box;
     padding-top: 5em; }
   .boton_contacto {
@@ -288,22 +295,26 @@
     padding-inline-start: 3rem;
     padding-inline-end: 3rem;
     text-transform: uppercase; }
-  .zoom {
-    transition: transform .2s;
-    width: 500px;
-    height: 500px;
-    margin: 0 auto; }
-  .zoom:hover {
-    transform: scale(1.5); }
   /* --------------------------footer-------------------------- */ }
+
+.btn {
+  --bs-btn-color: white;
+  /* letra boton */
+  --bs-btn-bg: #632878;
+  /* background boton */
+  --bs-btn-hover-bg: #2a025e;
+  /* background hover boton */
+  --bs-btn-border-color: #141433;
+  /* border color boton */ }
 
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: "roboto"; }
 
 body {
-  font-family: "montserrat";
+  font-family: "roboto";
   background: #000026; }
 
 ul {
@@ -311,5 +322,5 @@ ul {
 
 a {
   text-decoration: none;
-  font-family: "montserrat";
+  font-family: "roboto";
   color: #331ba9; }
