--- a/views/about.html
+++ b/views/about.html
@@ -16,8 +16,9 @@
 </head>
 
 <body class="bodycontenedor">
+    <!-- INICIA HEADER -->
     <header id="ir a arriba">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">*EMPRESA*</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,19 +29,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../gallery/gallery.html">gallery</a>
+                            <a class="nav-link" href="./gallery.html">gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../product/product.html">productos</a>
+                            <a class="nav-link" href="./product.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../contact/contact.html">Contacto</a>
+                            <a class="nav-link" href="./contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./about.html">sobre nosotros</a>
+                            <a class="nav-link active" href="./about.html">sobre nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -51,8 +52,9 @@
             </div>
         </nav>
     </header>
+    <!-- TERMINA HEADER -->
     <main>
-        <h2>Acerca de nosotros</h2>
+        <h1>Acerca de nosotros</h1>
         <div>
             <section>
                 <div class="animate__animated animate__slideInRight">
@@ -73,103 +75,107 @@
                     </article>
                 </div>
             </section>
-            <h2>FAQ</h2> 
+            <h2>FAQ</h2>
             <div class="row justify-content-center">
-            <div class="col-xl-6 col-lg-12 col-md col-sm animate__animated animate__fadeInUp">
-                <section class="textos">
-                    <div class="accordion" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Como hago para comprar?
-                                </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>cuando alcance la parte del curso que me permita realizar un carrito de
-                                        compras</strong>
+                <div class="col-xl-6 col-lg-12 col-md col-sm animate__animated animate__fadeInUp">
+                    <section class="textos">
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        Como hago para comprar?
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show"
+                                    aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>cuando alcance la parte del curso que me permita realizar un carrito de
+                                            compras</strong>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        Politicas de cambios
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>
+                                            Podés cambiar tu producto por otro dentro de los 10 días de efectuada la
+                                            compra
+                                            siempre y cuando el mismo no esté abierto ni haya tenido uso. Si el producto
+                                            a
+                                            cambiar fuera mas costoso podrás abonar la diferencia, y si fuera más
+                                            económico
+                                            haremos una nota de crédito en tu favor. Pasado dicho plazo o bien una vez
+                                            que
+                                            el producto haya sido abierto, únicamente podrás realizar el cambio si el
+                                            mismo
+                                            no funcionara dentro del período de la garantía presentado todas las cajas y
+                                            accesorios con los que haya venido y la factura de compra.
+                                        </strong>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        Política de Arrepentimiento
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>
+                                            Podés cancelar tu compra y solicitar el reintegro de tu dinero dentro de los
+                                            10
+                                            días de haber efectuado la operación. Para eso deberás completar este
+                                            formulario: Politica de Arrepentimiento. Si el producto aún no hubiera sido
+                                            entregado el proceso de devolución demoraría unas 72hs hábiles, mientras que
+                                            si
+                                            el producto ya está en viaje o fue entregado, deberemos primero volver a
+                                            tenerlo
+                                            en nuestro poder para realizar la cancelación. Al completar el formulario
+                                            indicando nos comunicaremos informando pasos a seguir.</strong>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Politicas de cambios
-                                </button>
-                            </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>
-                                        Podés cambiar tu producto por otro dentro de los 10 días de efectuada la compra
-                                        siempre y cuando el mismo no esté abierto ni haya tenido uso. Si el producto a
-                                        cambiar fuera mas costoso podrás abonar la diferencia, y si fuera más económico
-                                        haremos una nota de crédito en tu favor. Pasado dicho plazo o bien una vez que
-                                        el producto haya sido abierto, únicamente podrás realizar el cambio si el mismo
-                                        no funcionara dentro del período de la garantía presentado todas las cajas y
-                                        accesorios con los que haya venido y la factura de compra.
-                                    </strong>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Política de Arrepentimiento
-                                </button>
-                            </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>
-                                        Podés cancelar tu compra y solicitar el reintegro de tu dinero dentro de los 10
-                                        días de haber efectuado la operación. Para eso deberás completar este
-                                        formulario: Politica de Arrepentimiento. Si el producto aún no hubiera sido
-                                        entregado el proceso de devolución demoraría unas 72hs hábiles, mientras que si
-                                        el producto ya está en viaje o fue entregado, deberemos primero volver a tenerlo
-                                        en nuestro poder para realizar la cancelación. Al completar el formulario
-                                        indicando nos comunicaremos informando pasos a seguir.</strong>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                </div>
             </div>
-        </div>
     </main>
+    <!-- INICIA FOOTER -->
     <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">
-                            *EMPRESA*
-                        </h6>
                         <p>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="../index.html" role="button"><i class="bi bi-motherboard"></i></a>
+                                href="../index.html" role="button"><i class="bi bi-motherboard">*EMPRESA*</i></a>
                         </p>
                     </div>
-                    <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                         <p>
                             <a class="text-white" href="../index.html">Home</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../product/product.html">Productos</a>
+                            <a class="text-white" href="../views/product.html">Productos</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../contact/contact.html">Contacto</a>
+                            <a class="text-white" href="../views/contact.html">Contacto</a>
                         </p>
                     </div>
-                    <hr class="w-100 clearfix d-md-none" />
-                    <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="../gallery/gallery.html">galeria</a>
+                            <a class="text-white" href="../views/gallery.html">galeria</a>
                         </p>
                         <p>
                             <a class="text-white" href="./about.html">about</a>
@@ -197,6 +203,7 @@
             </section>
         </div>
     </footer>
+    <!-- TERMINA FOOTER -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
