--- a/views/contact.html
+++ b/views/contact.html
@@ -16,8 +16,9 @@
 </head>
 
 <body class="bodycontenedor">
+    <!-- INICIO HEADER -->
     <header id="ir a arriba">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">*EMPRESA*</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,19 +29,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../gallery/gallery.html">gallery</a>
+                            <a class="nav-link" href="./gallery.html">gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../product/product.html">productos</a>
+                            <a class="nav-link" href="./product.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contacto</a>
+                            <a class="nav-link active" href="./contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../about/about.html">sobre nosotros</a>
+                            <a class="nav-link" href="./about.html">sobre nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -51,45 +52,51 @@
             </div>
         </nav>
     </header>
+    <!-- FINAL HEADER -->
+
+    <!-- FORMULARIO -->
     <main>
-        <div class="contactos animate__animated animate__bounceIn">
-            <h1>FORMULARIO DE CONTACTO</h1>
-            <form action="">
-                <div class="row justify-content-center">
-                    <section class="col-xl-6 col-lg-8 col-md-6 col-sm-6">
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Nombre" aria-label="nombre
+        <div class="contactos_container">
+            <div class="contactos animate__animated animate__bounceIn">
+                <h1>FORMULARIO DE CONTACTO</h1>
+                <form action="">
+                    <div class="row justify-content-center">
+                        <section class="col-xl-6 col-lg-8 col-md-6 col-sm-6">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Nombre" aria-label="nombre
                 aria-describedby=" basic-addon1="" required>
-                        </div>
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Apellido" aria-label="apellido"
-                                required>
-                        </div>
-                        <div class="input-group mb-3">
-                            <input type="mail" class="form-control" placeholder="mail" aria-label="mail" required>
-                        </div>
-                        <div class="input-group">
-                            <textarea class="form-control" aria-label="With textarea" required></textarea>
-                        </div>
-                        <div class="boton_contacto">
-                            <button type="submit" class="btn btn-secondary">Ingresar</button>
-                        </div>
-                    </section>
-                </div>
-            </form>
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Apellido" aria-label="apellido"
+                                    required>
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="mail" class="form-control" placeholder="mail" aria-label="mail" required>
+                            </div>
+                            <div class="input-group">
+                                <textarea class="form-control" aria-label="With textarea"
+                                    required>Ingrese motivo</textarea>
+                            </div>
+                            <div class="boton_contacto">
+                                <button type="submit" class="btn btn-secondary">Ingresar</button>
+                            </div>
+                        </section>
+                    </div>
+                </form>
+            </div>
         </div>
     </main>
+    <!-- FIN FORMULARIO -->
+
+    <!-- FOOTER -->
     <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">
-                            *EMPRESA*
-                        </h6>
                         <p>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="../index.html" role="button"><i class="bi bi-motherboard"></i></a>
+                                href="../index.html" role="button"><i class="bi bi-motherboard">*EMPRESA*</i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
@@ -98,20 +105,20 @@
                             <a class="text-white" href="../index.html">Home</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../product/product.html">Productos</a>
+                            <a class="text-white" href="../views/product.html">Productos</a>
                         </p>
                         <p>
-                            <a class="text-white" href="./contact.html">Contacto</a>
+                            <a class="text-white" href="../views/contact.html">Contacto</a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="../gallery/gallery.html">galeria</a>
+                            <a class="text-white" href="../views/gallery.html">galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../about/about.html">about</a>
+                            <a class="text-white" href="../views/about.html">about</a>
                         </p>
                         <p>
                             <a class="text-white" href="#">boton arrepentimiento</a>
@@ -136,6 +143,9 @@
             </section>
         </div>
     </footer>
+    <!-- FIN FOOTER -->
+
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
