--- a/views/gallery.html
+++ b/views/gallery.html
@@ -17,9 +17,9 @@
 
 <body class="bodycontenedor">
     <header id="ir a arriba">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">*EMPRESA*</a>
+                <a class="navbar-brand" href="/index.html">*EMPRESA*</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -28,19 +28,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./gallery.html">gallery</a>
+                            <a class="nav-link active" href="./gallery.html">gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../product/product.html">productos</a>
+                            <a class="nav-link" href="./product.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../contact/contact.html">Contacto</a>
+                            <a class="nav-link" href=".contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../about/about.html">sobre nosotros</a>
+                            <a class="nav-link" href="./about.html">sobre nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -52,6 +52,7 @@
         </nav>
     </header>
     <main>
+        <h1>GALERIA</h1>
         <h2>imagenes de galeria</h2>
         <section class="justify-content-center flex-wrap d-flex align-items-center">
             <div class="galeria_imagenes">
@@ -158,12 +159,9 @@
             <section class="">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">
-                            *EMPRESA*
-                        </h6>
                         <p>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="../index.html" role="button"><i class="bi bi-motherboard"></i></a>
+                                href="../index.html" role="button"><i class="bi bi-motherboard">*EMPRESA*</i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
@@ -172,20 +170,20 @@
                             <a class="text-white" href="../index.html">Home</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../product/product.html">Productos</a>
+                            <a class="text-white" href="../views/product.html">Productos</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../contact/contact.html">Contacto</a>
+                            <a class="text-white" href="../views/contact.html">Contacto</a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="./gallery.html">galeria</a>
+                            <a class="text-white" href="../views/gallery.html">galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../about/about.html">about</a>
+                            <a class="text-white" href="../views/about.html">about</a>
                         </p>
                         <p>
                             <a class="text-white" href="#">boton arrepentimiento</a>
